--- a/Form2.resx
+++ b/Form2.resx
@@ -44790,4 +44790,7 @@
         /G0czm08o7MQPJR+RfsEYTCARdBqin8XIdkYfGzhzv8fJPZZemzzqMIAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
